--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ordertron",
   "version": "1.0.0",
   "description": "Restoring absolute tranquility",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_PATH=src/ node main.js",
+    "test": "jest"
   },
   "author": "Ara Malayan",
   "license": "MIT",
@@ -12,12 +13,15 @@
     "canvas": "^2.8.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.7.0",
-    "exiftool-vendored": "^15.2.0",
+    "eslint": "^7.32.0",
+    "exiftool-vendored": "^15.3.0",
     "merge-images": "^2.0.0",
     "node-cron": "^3.0.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^3.0.0",
     "syno": "^2.2.0",
-    "twitter-api-v2": "^1.3.0"
+    "twitter-api-v2": "^1.4.1"
+  },
+  "devDependencies": {
+    "jest": "^27.1.0"
   }
 }
