--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/ordertron-aws
+    overwrite: true
 permissions:
   - object: /home/ubuntu
     owner: ubuntu
