--- a/appspec.yml
+++ b/appspec.yml
@@ -1,4 +1,4 @@
-version: 2.0.1
+version: 2.0.2
 os: linux
 files:
   - source: /
@@ -12,6 +12,14 @@ permissions:
       - directory
       - file
 hooks:
+  ApplicationStop:
+    - location: scripts/stop_service.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
   ApplicationStart:
     - location: scripts/reload-pm2.sh
       timeout: 300
