--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['16.x']
+        node-version: ['16.9.1']
 
     steps:
       - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['16.x']
+        node-version: ['16.9.1']
         appname: ['ordertron-codedeploy']
         deploy-group: ['prod']
         s3-bucket: ['ordertron-bucket']
@@ -53,6 +53,10 @@ jobs:
       # Install project dependencies and build
       - name: Install dependencies
         run: npm ci
+      
+      # Clean NPM cache
+      - name: Clean npm cache
+        run: npm cache clean --force
 
       # Install AWS CLI 2
       - name: Install AWS CLI 2
