Move unused dependencies to dev, set AWS pipeline to only install prod dependencies

--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -52,7 +52,7 @@ jobs:
 
       # Install project dependencies and build
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --production
       
       # Clean NPM cache
       - name: Clean npm cache
