--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,11 +17,9 @@ jobs:
 
     steps:
     - name: Get current package version
+      id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.1.0
-      with:
-        path: package.json
-    - name: Check package version
-      run: cat ${{ steps.package-version.outputs.current-version}}
+        run: cat ${{ steps.package-version.outputs.current-version}}
 
     
     - uses: actions/checkout@v2
