--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "ordertron",
-  "version": "2.3.6",
+  "version": "2.4.0",
   "description": "Restoring absolute tranquility",
+  "type": "module",
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/main.js"
   },
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^3.0.0",
     "twitter-api-v2": "^1.4.1"
   },
   "devDependencies": {
-    "jest": "^27.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "exiftool-vendored": "^15.3.0",
+    "jest": "^27.1.0",
     "merge-images": "^2.0.0",
     "syno": "^2.2.0"
   }
