--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^2.8.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "node-cron": "^3.0.0",
