--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      # Install supporting libraries
+      - name: Install supporting libraries
+        run: apt install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
+
       # Install project dependencies, test and build
       - name: Install dependencies
         run: npm ci
@@ -49,6 +53,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      # Install supporting libraries
+      - name: Install supporting libraries
+        run: apt install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
 
       # Install project dependencies and build
       - name: Install dependencies
