--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.6.20",
+  "version": "2.7.0",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -20,6 +20,7 @@
     "twitter-api-v2": "^1.9.1"
   },
   "devDependencies": {
+    "corde": "^4.4.6",
     "eslint": "^8.7.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
