--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ordertron",
-  "version": "2.7.0",
+  "version": "2.7.1",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "jest",
+    "test": "corde",
     "lint": "eslint src/main.js"
   },
   "author": "Ara Malayan",
@@ -16,8 +16,8 @@
     "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
     "node-cron": "^3.0.0",
-    "node-fetch": "^3.2.0",
-    "twitter-api-v2": "^1.9.1"
+    "node-fetch": "^3.2.1",
+    "twitter-api-v2": "^1.11.0"
   },
   "devDependencies": {
     "corde": "^4.4.6",
