--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -8,22 +8,22 @@ on:
     branches:
       - main
 
+env:
+  node-version: 16.17.0
+
 jobs:
   buildAndTest:
     name: CI Pipeline
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: ['16.17.0']
 
     steps:
       - uses: actions/checkout@v2
 
       # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: Install Node.js ${{ node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ node-version }}
 
       # Install supporting libraries
       - name: Install supporting libraries
@@ -38,7 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['16.15.0']
         appname: ['ordertron-codedeploy']
         deploy-group: ['prod']
         s3-bucket: ['ordertron-bucket']
@@ -49,10 +48,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: Install Node.js ${{ node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ node-version }}
 
       # Install supporting libraries
       - name: Install supporting libraries
