--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  node-version: 16.17.0
+  node_version: 16.17.0
 
 jobs:
   buildAndTest:
@@ -20,10 +20,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Initialize Node.js
-      - name: Install Node.js ${{ node-version }}
+      - name: Install Node.js $node_version
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ node-version }}
+          node-version: $node_version
 
       # Install supporting libraries
       - name: Install supporting libraries
@@ -48,10 +48,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Initialize Node.js
-      - name: Install Node.js ${{ node-version }}
+      - name: Install Node.js $node_version
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ node-version }}
+          node-version: $node_version
 
       # Install supporting libraries
       - name: Install supporting libraries
