--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -15,15 +15,17 @@ jobs:
   buildAndTest:
     name: CI Pipeline
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: ['16.17.0']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       # Initialize Node.js
-      - name: Install Node.js $node_version
-        uses: actions/setup-node@v1
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: $node_version
+          node-version: ${{ matrix.node-version }}
 
       # Install supporting libraries
       - name: Install supporting libraries
@@ -38,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version: ['16.17.0']
         appname: ['ordertron-codedeploy']
         deploy-group: ['prod']
         s3-bucket: ['ordertron-bucket']
@@ -45,13 +48,13 @@ jobs:
 
     needs: buildAndTest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       # Initialize Node.js
-      - name: Install Node.js $node_version
-        uses: actions/setup-node@v1
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: $node_version
+          node-version: ${{ matrix.node-version }}
 
       # Install supporting libraries
       - name: Install supporting libraries
