--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.8.6",
+  "version": "2.8.7",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -12,15 +12,16 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
-    "canvas": "^2.9.3",
+    "canvas": "^2.9.1",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
-    "node-cron": "^3.0.2",
-    "twitter-api-v2": "^1.12.5"
+    "node-cron": "^3.0.0",
+    "node-fetch": "^3.2.4",
+    "twitter-api-v2": "^1.12.2"
   },
   "devDependencies": {
     "corde": "^4.4.7",
-    "eslint": "^8.22.0",
+    "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0"
