--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.8.7",
+  "version": "2.9.0",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -12,9 +12,10 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
-    "canvas": "^2.9.1",
+    "@napi-rs/canvas": "^0.1.29",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "ggst-api-node": "^1.0.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^3.2.4",
     "twitter-api-v2": "^1.12.2"
