--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.9.1",
+  "version": "2.10.0",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -15,7 +15,8 @@
     "@napi-rs/canvas": "^0.1.29",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
-    "ggst-api-node": "^1.0.4",
+    "fightcade-api": "^1.0.5",
+    "ggst-api-node": "^1.1.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^3.2.4",
     "twitter-api-v2": "^1.12.2"
