--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,10 @@ permissions:
       - directory
       - file
 hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ubuntu
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
