--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.1"
+  },
+  "engines": {
+    "node": ">=18.6.0"
   }
 }
