--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -20,6 +20,11 @@ jobs:
         node-version: ['18.9.1']
     steps:
       - uses: actions/checkout@v3
+      # Cache npm modules
+      - uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
 
       # Initialize Node.js
       - name: Install Node.js ${{ matrix.node-version }}
