--- a/.github/workflows/aws-cicd.yml
+++ b/.github/workflows/aws-cicd.yml
@@ -12,35 +12,7 @@ env:
   node_version: 18.15.0
 
 jobs:
-  buildAndTest:
-    name: CI Pipeline
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: ['18.15.0']
-    steps:
-      - uses: actions/checkout@v3
-      # Cache npm modules
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      # Initialize Node.js
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      # Install supporting libraries
-      - name: Install supporting libraries
-        run: sudo apt install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
-
-      # Install project dependencies, test and build
-      - name: Install dependencies
-        run: npm ci
-
-  deploy:
+  build-deploy:
     name: CD Pipeline
     runs-on: ubuntu-latest
     strategy:
@@ -63,7 +35,7 @@ jobs:
 
       # Install supporting libraries
       - name: Install supporting libraries
-        run: sudo apt install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
+        run: sudo apt install -y build-essential
 
       # Install project dependencies and build
       - name: Install dependencies
