--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,22 +21,24 @@ jobs:
 
     - name: Get current package version
       id: package-version
-      uses: martinbeentjes/npm-get-version-action@main
+      uses: martinbeentjes/npm-get-version-action@v1
     
-    - name: Build version tagged Docker image
-      run: docker build --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }}:${{ steps.package-version.outputs.current-version}} .
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
 
-    - name: Build latest tagged Docker image
-      run: docker build --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }} .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64
     
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_TOKEN }}
-
-    - name: Push version tagged Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }}:${{ steps.package-version.outputs.current-version}}
     
-    - name: Push latest tagged Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }}
+    - name: Build and push version tagged Docker image
+      run: docker buildx build --platform linux/amd64,linux/arm64 --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }}:${{ steps.package-version.outputs.current-version}} . --push
+
+    - name: Build and push latest tagged Docker image
+      run: docker buildx build --platform linux/amd64,linux/arm64 --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ matrix.application-name }} . --push
