--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.11.6",
+  "version": "2.11.7",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -12,19 +12,16 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.29",
+    "@napi-rs/canvas": "^0.1.44",
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1",
-    "fightcade-api": "^1.0.5",
-    "ggst-api-node": "^1.1.0",
-    "node-cron": "^3.0.0",
-    "node-fetch": "^3.2.4",
-    "twitter-api-v2": "^1.12.2"
+    "dotenv": "^16.3.1",
+    "fightcade-api": "^2.0.5",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "corde": "^4.8.0",
-    "eslint": "^8.29.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1"
   },
