--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.11.8",
+  "version": "2.11.9",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -12,18 +12,15 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.44",
+    "@napi-rs/canvas": "^0.1.52",
     "discord.js": "^13.7.0",
-    "dotenv": "^16.3.1",
-    "fightcade-api": "^2.0.5",
+    "dotenv": "^16.4.5",
+    "fightcade-api": "^3.0.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "corde": "^4.8.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint": "^9.2.0"
   },
   "engines": {
     "node": ">=20.10.0"
