--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordertron",
-  "version": "2.13.1",
+  "version": "2.13.2",
   "description": "Restoring absolute tranquility",
   "type": "module",
   "main": "src/main.js",
@@ -12,14 +12,14 @@
   "author": "Ara Malayan",
   "license": "MIT",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.53",
+    "@napi-rs/canvas": "^0.1.54",
     "discord.js": "^13.7.0",
     "dotenv": "^16.4.5",
-    "fightcade-api": "file:fightcade-api-3.0.6.tgz"
+    "fightcade-api": "^3.0.6"
   },
   "devDependencies": {
     "corde": "^4.8.0",
-    "eslint": "^9.8.0"
+    "eslint": "^9.9.0"
   },
   "engines": {
     "node": ">=20.10.0"
